--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "jest --testEnvironment=node --runInBand ./tests"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +18,11 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongodb": "^4.2.0",
-    "mongoose": "^6.0.13",
-    "nearest-date": "^1.0.1"
+    "mongoose": "^6.0.13"
+  },
+  "devDependencies": {
+    "@shelf/jest-mongodb": "^2.1.0",
+    "jest": "^27.3.1",
+    "supertest": "^6.1.6"
   }
 }
